--- a/Task1/index.html
+++ b/Task1/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>«Практична робота No1 Петелюк Віталій Русланович»</h1>
+    <h1>Практична робота No1 Петелюк Віталій Русланович</h1>
     <p> Я очікую від курсу Web Програмування навчання Javascript та подібних йому мов, а не на повторенню верстки і базових команд php.  </p>
     
 </body>
