added layout and css

--- a/Task2/index.html
+++ b/Task2/index.html
@@ -7,6 +7,11 @@
     <title>Task2</title>
 </head>
 <body>
-    
+    <h1>Main caption</h1>
+    <div class="row display-flex">
+        <div class="col-lg-4 col-md-6 col-sm-12"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12"></div>
+    </div>
 </body>
 </html>
