added cols and css for this cols

--- a/Task2/index.html
+++ b/Task2/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Main caption</h1>
-    <div class="row display-flex">
-        <div class="col-lg-4 col-md-6 col-sm-12"></div>
+    <div class="row display-flex row-padding">
+        <div class="col-lg-4 col-md-6 col-sm-12 container-padding">
+            <div class="display-flex align-items-end f-direct-column border-10per border bg-color-lgreen"></div>
+        </div>
         <div class="col-lg-4 col-md-6 col-sm-12"></div>
         <div class="col-lg-4 col-md-6 col-sm-12"></div>
     </div>
