added orange cont inside lightgreen cont

--- a/Task2/index.html
+++ b/Task2/index.html
@@ -10,7 +10,11 @@
     <h1>Main caption</h1>
     <div class="row display-flex row-padding">
         <div class="col-lg-4 col-md-6 col-sm-12 container-padding">
-            <div class="display-flex align-items-end f-direct-column border-10per border bg-color-lgreen"></div>
+            <div class="display-flex align-items-end f-direct-column border-10per border bg-color-lgreen">
+                <div class="caption-padding border-bottom border-left border10per bg-color-orange">
+                    <p class="fs-5 font-w-bold">Caption 1</p>
+                </div>
+            </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12"></div>
         <div class="col-lg-4 col-md-6 col-sm-12"></div>
