added colors + fixed miss

--- a/Task2/index.html
+++ b/Task2/index.html
@@ -19,15 +19,15 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 container-padding">
             <div class="display-flex align-items-end f-direct-column border-10per border bg-color-lgreen">
-                <div class="caption-padding border-bottom border-left border10per bg-color-orange">
-                    <p class="fs-5 font-w-bold">Caption 2</p>
+                <div class="caption-padding border-bottom border-left border10per bg-color-palepink">
+                    <p class="fs-5 font-w-bold f-color-white">Caption 2</p>
                 </div>
                 <p class="padding line-height fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam modi eaque perspiciatis quibusdam quam laborum dolore exercitationem saepe rem. Adipisci tenetur ducimus reiciendis hic distinctio facere, obcaecati error cum harum?</p>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 container-padding">
+        <div class="col-lg-4 col-md-12 col-sm-12 container-padding">
             <div class="display-flex align-items-end f-direct-column border-10per border bg-color-lgreen">
-                <div class="caption-padding border-bottom border-left border10per bg-color-orange">
+                <div class="caption-padding border-bottom border-left border10per bg-color-redpurple">
                     <p class="fs-5 font-w-bold">Caption 3</p>
                 </div>
                 <p class="padding line-height fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam modi eaque perspiciatis quibusdam quam laborum dolore exercitationem saepe rem. Adipisci tenetur ducimus reiciendis hic distinctio facere, obcaecati error cum harum?</p>
