feat: add display grid

--- a/Task3/index.html
+++ b/Task3/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <cont>
+            <inner></inner>
+        </cont>
+        <cont>
+            <inner></inner>
+        </cont>
+        <cont>
+            <inner></inner>
+        </cont>
+    </main>
 </body>
 </html>
