style: add inner in cont

--- a/Task3/index.html
+++ b/Task3/index.html
@@ -9,13 +9,19 @@
 <body>
     <main>
         <cont>
-            <inner></inner>
+            <inner>
+                <p>Caption1</p>
+            </inner>
         </cont>
         <cont>
-            <inner></inner>
+            <inner>
+                <p>Caption2</p>
+            </inner>
         </cont>
         <cont>
-            <inner></inner>
+            <inner>
+                <p>Caption3</p>
+            </inner>
         </cont>
     </main>
 </body>
