style: add in inner caption div and style for him

--- a/Task3/index.html
+++ b/Task3/index.html
@@ -10,17 +10,27 @@
     <main>
         <cont>
             <inner>
-                <p>Caption1</p>
+                <div class="label1">
+                    <p>Caption1</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore recusandae earum, placeat, sapiente facilis fugit soluta repellat hic, quos reprehenderit nesciunt dolorem cupiditate harum minus facere iure debitis temporibus necessitatibus!</p>
+            </inner>
+            
+        </cont>
+        <cont>
+            <inner>
+                <div class="label2">
+                    <p>Caption2</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore recusandae earum, placeat, sapiente facilis fugit soluta repellat hic, quos reprehenderit nesciunt dolorem cupiditate harum minus facere iure debitis temporibus necessitatibus!</p>
             </inner>
         </cont>
         <cont>
             <inner>
-                <p>Caption2</p>
-            </inner>
-        </cont>
-        <cont>
-            <inner>
-                <p>Caption3</p>
+                <div class="label3">
+                    <p>Caption3</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore recusandae earum, placeat, sapiente facilis fugit soluta repellat hic, quos reprehenderit nesciunt dolorem cupiditate harum minus facere iure debitis temporibus necessitatibus!</p>
             </inner>
         </cont>
     </main>
