--- a/Task3/index.html
+++ b/Task3/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Main Caption</h1>
     <main>
         <cont>
             <inner>
